# krunner-notion-tasks

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  PKGBUILD  README.md  install.sh  krunner-notion-tasks.notifyrc  uninstall.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/: apiresult.h  notionrunner.cpp  notionrunner.h  notionrunner.json
src/config/: notionconfig.cpp  notionconfig.h  notionconfig.json  notionconfig.ui
